# event-booking-system-php

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: dependencies.py  main.py  models.py  schemas.py
app/core/: auth.py  config.py  constants.py  database.py  dependencies.py
app/routes/: authentication.py  dashboard.py  events.py
app/services/: dashboard_service.py  moderation_service.py
app/static/css/: default.css
app/static/js/: event-modal.js  explore.js  hamburger.js  login_validation.js  new-event-validation.js  profile-icon-loader.js  signup_validation.js
app/templates/: about.jinja  base.jinja  contact.jinja  dpa.jinja  event.jinja  explore.jinja  index.jinja  login.jinja  new.jinja  privacy.jinja  profile.jinja  settings.jinja  signup.jinja  terms.jinja
app/templates/dashboard/: base.jinja  bookings.jinja  home.jinja  moderation.jinja  posts.jinja  sales.jinja
app/templates/dashboard/components/: sidebar_nav.jinja
postgres/seed/: seed.sql
public/assets/js/: new-event-validation.js  signup_validation.js
scripts/: seed_database.py
src/handlers/: login_handler.php  signup_handler.php
src/routes/: about.php  event.php  explore.php  login.php  new.php  profile.php  settings.php  signup.php
