[project]
name = "chautari"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "bcrypt==4.0.1",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "psycopg-binary>=3.2.9",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
